# consola-transaccional

./: .gitignore  CLAUDE.md  Makefile  README.md
.github/workflows/: ci.yml
contracts/: openapi.yaml
docs/: plan-consola-transaccional-sonda.md  problemas-resueltos.md
frontend/: angular.json  eslint.config.js  package-lock.json  package.json
frontend/src/app/: app.config.ts  app.routes.ts  app.spec.ts  app.ts
frontend/src/app/api-client/: README.md
frontend/src/app/api-client/.openapi-generator/: FILES
frontend/src/app/api-client/api/: api.ts  auth.service.ts  auth.serviceInterface.ts  health.service.ts  health.serviceInterface.ts  metrics.service.ts  metrics.serviceInterface.ts  transactions.service.ts  transactions.serviceInterface.ts
frontend/src/app/api-client/model/: auditEntry.ts  dashboardMetrics.ts  errorDetailsInner.ts  getHealth200Response.ts  loginRequest.ts  modelError.ts  models.ts  monthBucket.ts  party.ts  refreshTokenRequest.ts  role.ts  statusBucket.ts  tokenPair.ts  transaction.ts  transactionPage.ts  transactionPagePageInfo.ts  transactionStatus.ts  transactionType.ts  transitionAction.ts  transitionRequest.ts  user.ts
frontend/src/app/core/: auth.guard.ts  token-store.service.ts
frontend/src/app/features/auth/: login.html  (+1 more)
frontend/src/app/services/: auth-api.service.ts  metrics-api.service.ts  transactions-api.service.ts
frontend/src/app/shared/: api-error.spec.ts  api-error.ts  nav.ts  toast.service.ts  toasts.ts
infra/: docker-compose.yml
infra/ci/: check_drift.py
infra/gateway/: nginx.conf
infra/mongo-init/: init-replica.js
infra/seed/: seed.py
services/auth/: Dockerfile  pyproject.toml
services/auth/app/: config.py  main.py  observability.py
services/auth/app/api/: routes_auth.py
services/auth/app/domain/: models.py
services/auth/app/repository/: users_repo.py
services/auth/app/services/: passwords.py  token_service.py
services/auth/tests/: conftest.py  test_auth_flow.py  test_health.py  test_passwords.py  test_tokens_unit.py
services/transactions/: pyproject.toml
services/transactions/app/: config.py  main.py
services/transactions/app/api/: auth.py  errors.py  routes_health.py  routes_metrics.py  routes_transactions.py
services/transactions/app/domain/: models.py  state_machine.py
services/transactions/app/repository/: transactions_repo.py
services/transactions/app/services/: idempotency.py  metrics_service.py  pagination.py  transactions_service.py  transitions_service.py
services/transactions/scripts/: export_openapi.py
services/transactions/tests/: conftest.py  test_activity.py  test_api.py  test_auth_rbac.py  test_indexes.py  test_metrics.py  test_pagination.py  test_pagination_walk.py  test_routes_metrics.py  test_state_machine.py  test_transitions.py
(+16 files in other folders)
