[project]
name = "transactions-service"
version = "1.1.0"
description = "Microservicio núcleo transaccional — consola de operaciones"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pymongo>=4.10",
    "pydantic-settings>=2.6",
    "pyjwt[crypto]>=2.10",
    "redis>=5.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
    "pyyaml>=6.0",
    "fakeredis>=2.26",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC"]

[tool.ruff.lint.per-file-ignores]
# Los modelos usan camelCase deliberadamente: paridad 1:1 con el contrato OpenAPI.
"app/domain/models.py" = ["N815"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# AsyncMongoClient se ata al event loop donde se creó; un solo loop por sesión
# evita "Cannot use AsyncMongoClient in different event loop".
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
